--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "firebase": "^10.12.1",
     "framer-motion": "^11.2.0",
     "next": "14.2.3",
+    "plyr": "^3.7.8",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.4",
